squash another mapbox bug

--- a/app/assets/stylesheets/components/_mapbox_bug.scss
+++ b/app/assets/stylesheets/components/_mapbox_bug.scss
@@ -1,3 +1,7 @@
 .mapboxgl-ctrl-attrib-inner {
   display: none;
 }
+
+.mapboxgl-control-container {
+  display: none;
+}
